layout in 70 char column

--- a/main.tex
+++ b/main.tex
@@ -61,55 +61,107 @@
 % Interval timing plays a role in reaction time.
 %%% (Internal/external cues)
 
-The passage of time is one of the most basic facts of our world, making timing one of the most important functions of the mind.
-Thus, a lot of scientific effort is spent on discovering its underlying mechanisms.
+The passage of time is one of the most basic facts of our world,
+making timing one of the most important functions of the mind.  Thus,
+a lot of scientific effort is spent on discovering its underlying
+mechanisms.
 
 % CNV -> interval length
-One line of research in this area is looking at connections between electrophysiological measures from the brain and interval timing.
-For example, \citeA{macar_supplementary_1999} found a positive correlation between the amplitude of a negative cortical potential during a self-produced interval and the duration of the same interval.
-However, in a replication of this experiment \citeA{kononowicz_slow_2011} failed to find the same effect.
+One line of research in this area is looking at connections between
+electrophysiological measures from the brain and interval timing.  For
+example, \citeA{macar_supplementary_1999} found a positive correlation
+between the amplitude of a negative cortical potential during a
+self-produced interval and the duration of the same interval.
+However, in a replication of this experiment
+\citeA{kononowicz_slow_2011} failed to find the same effect.
 
 % Beta -> interval length
 % tapping -> off/onset same -> no causality
-More recently, the power of neuronal oscillations in the beta band was found to be another measure that is predictive of the length of produced intervals.
+More recently, the power of neuronal oscillations in the beta band was
+found to be another measure that is predictive of the length of
+produced intervals.
 
-\citeA{jenkinson_new_2011} suggested that beta power in the basal ganglia provides an index of the likelihood that a voluntary movement will be required, with a low beta power indicating a high probability.
-Indeed, \citeA{joundi_persistent_2013} found that in a task where participants were instructed to tap along with an external rhythm, beta power was lower during the tapping.
-Furthermore, they found that with high tapping rates, beta activity could not fully resynchronize between taps.
+\citeA{jenkinson_new_2011} suggested that beta power in the basal
+ganglia provides an index of the likelihood that a voluntary movement
+will be required, with a low beta power indicating a high probability.
+Indeed, \citeA{joundi_persistent_2013} found that in a task where
+participants were instructed to tap along with an external rhythm,
+beta power was lower during the tapping.  Furthermore, they found that
+with high tapping rates, beta activity could not fully resynchronize
+between taps.
 
-Along similar lines, \citeA{bartolo_information_2014} used beta power to predict the interval length in a synchronization-continuation tapping task performed on monkeys.
-In this experiment, subjects first tapped along with an externally provided beat (synchronization), and then continued tapping at the same speed without external guidance (continuation).
-During the continuation part, longer intervals were associated with higher beta power during the interval, and vice versa.
+Along similar lines, \citeA{bartolo_information_2014} used beta power
+to predict the interval length in a synchronization-continuation
+tapping task performed on monkeys.  In this experiment, subjects first
+tapped along with an externally provided beat (synchronization), and
+then continued tapping at the same speed without external guidance
+(continuation).  During the continuation part, longer intervals were
+associated with higher beta power during the interval, and vice versa.
 
-\citeA{kononowicz_beta_2014} extended these findings to an interval production task in humans, in which participants were instructed to estimate time intervals of 2.5 seconds by pressing a key twice.
-In this study, intervals were distinct from each other, providing a clear association between the beta power measured during the interval and the length of the interval itself, and also provided enough time for beta oscillations to fully resynchronize between trials.
-As in \citeauthor{bartolo_information_2014}'s study, beta power was postitively correlated with the length of the produced intervals.
+\citeA{kononowicz_beta_2014} extended these findings to an interval
+production task in humans, in which participants were instructed to
+estimate time intervals of 2.5 seconds by pressing a key twice.  In
+this study, intervals were distinct from each other, providing a clear
+association between the beta power measured during the interval and
+the length of the interval itself, and also provided enough time for
+beta oscillations to fully resynchronize between trials.  As in
+\citeauthor{bartolo_information_2014}'s study, beta power was
+postitively correlated with the length of the produced intervals.
 
 % Interval timing -> reaction time
-In another area of the field of timing, a large body of research exists that links interval timing to reaction time tasks \cite<e.g.,>{karlin_reaction_1959, drazin_effects_1961, grosjean_timing_2001}.
-When participants come to expect the trigger stimulus after a specific time interval, deviations from this interval lead to predictable changes in reaction time.
-For example, \citeA{grosjean_timing_2001} found that when the stimulus appears earlier than expected, reaction times will be slower.
-Conversely, when it appears later than expected, reaction times will be faster.
-A simple explanation for this effect is that participants build up the readiness to react towards the point in time when they expect the stimulus to occur.
-When it appears before they expect it, they are less ready to respond to it, and thus slower.
-However, when it appears later than anticipated, the readiness is very high and the reaction comes faster.
+In another area of the field of timing, a large body of research
+exists that links interval timing to reaction time tasks
+\cite<e.g.,>{karlin_reaction_1959, drazin_effects_1961,
+  grosjean_timing_2001}.  When participants come to expect the trigger
+stimulus after a specific time interval, deviations from this interval
+lead to predictable changes in reaction time.  For example,
+\citeA{grosjean_timing_2001} found that when the stimulus appears
+earlier than expected, reaction times will be slower.  Conversely,
+when it appears later than expected, reaction times will be faster.  A
+simple explanation for this effect is that participants build up the
+readiness to react towards the point in time when they expect the
+stimulus to occur.  When it appears before they expect it, they are
+less ready to respond to it, and thus slower.  However, when it
+appears later than anticipated, the readiness is very high and the
+reaction comes faster.
 
-These findings clearly show that timing plays a role in reaction time tasks, in that participants implicitly use their sense of time to predict when the stimulus will occur.
+These findings clearly show that timing plays a role in reaction time
+tasks, in that participants implicitly use their sense of time to
+predict when the stimulus will occur.
 
 % This study
-The purpose of the present study is to investigate the link between beta power, interval timing, and reaction time.
-As beta power has been found to increase the length of estimated time intervals \cite<e.g.>{kononowicz_beta_2014}, and interval timing has been shown to play a role in reaction time tasks via expectancy effects \cite<e.g.>{grosjean_timing_2001}, we hypothesise that beta power can be used to predict the expectancy, and hence the response speed, in a reaction time task.
+The purpose of the present study is to investigate the link between
+beta power, interval timing, and reaction time.  As beta power has
+been found to increase the length of estimated time intervals
+\cite<e.g.>{kononowicz_beta_2014}, and interval timing has been shown
+to play a role in reaction time tasks via expectancy effects
+\cite<e.g.>{grosjean_timing_2001}, we hypothesise that beta power can
+be used to predict the expectancy, and hence the response speed, in a
+reaction time task.
 
-To assess this hypothesis, we performed a simple reaction time task in which participants initiated each trial themselves by pressing a key.
-Beta power was measured during the first second of each trial.
-For the first 150 trials, the trigger stimulus always occured after a 1.8 s from the start of the trial, in order for subjects to come to expect the stimulus after this interval.
-In the last 250 trials, the interval was chosen at random from the standard interval, and both 100 ms longer and shorter intervals.
-The interval lengths were chosen such that enough time passed between start of the trial and stimulus onset to allow the beta power to build up to its peak within the interval \cite<see>{kononowicz_beta_2014}.
+To assess this hypothesis, we performed a simple reaction time task in
+which participants initiated each trial themselves by pressing a key.
+Beta power was measured during the first second of each trial.  For
+the first 150 trials, the trigger stimulus always occured after a 1.8
+s from the start of the trial, in order for subjects to come to expect
+the stimulus after this interval.  In the last 250 trials, the
+interval was chosen at random from the standard interval, and both 100
+ms longer and shorter intervals.  The interval lengths were chosen
+such that enough time passed between start of the trial and stimulus
+onset to allow the beta power to build up to its peak within the
+interval \cite<see>{kononowicz_beta_2014}.
 
-In line with the findings of \citeA{grosjean_timing_2001}, reaction times were hypothesized to be slower for the shorter interval, and faster on trials with the longer interval.
+In line with the findings of \citeA{grosjean_timing_2001}, reaction
+times were hypothesized to be slower for the shorter interval, and
+faster on trials with the longer interval.
 
-In addition, we expected reaction times to be faster in trials where beta power is low, because participants hypothetically estimate the interval to end sooner than it actually does, and are thus very ready to respond when the stimulus finally does occur.
-Conversely, in trials with high beta power, participants should estimate the stimulus to occur later than it does, and thus not be prepared for it when it actually occurs, leading to a slower reaction time.
+In addition, we expected reaction times to be faster in trials where
+beta power is low, because participants hypothetically estimate the
+interval to end sooner than it actually does, and are thus very ready
+to respond when the stimulus finally does occur.  Conversely, in
+trials with high beta power, participants should estimate the stimulus
+to occur later than it does, and thus not be prepared for it when it
+actually occurs, leading to a slower reaction time.
 
 \section{Method}
 \section{Results}
@@ -171,16 +223,37 @@ Conversely, in trials with high beta power, participants should estimate the sti
 
 % Hazard function: conditional probability that a target will occur at a particular time, given that it has not already occurred (Coull 2008)
 
-The first of our hypotheses, predicting that reaction times will be slower in trials with a short interval, and faster in trials with a long interval, was clearly supported by the data.
-With the short and long intervals leading to a 25 ms and a 17 ms difference in reaction time to the standard condition, respectively, this effect is very substantial given that the difference between the groups was only 100 ms.
+% beta -> motor inhibition:
+%   kononowicz: S can plan when to make second press -> beta at start
+%   we:         S has to wait for beep -> no motor suppression at start
 
-Our second hypothesis, that beta power will correlate positively with reaction time, was not confirmed.
-In fact, Bayesian analyses even suggest that it does not have any value as a predictor of reaction time.
-This finding can be interpreted using the taxonomy proposed by \citeA{coull_dissociating_2008}.
-\citeA{kononowicz_beta_2014}'s task required motor timing, a form of explicit timing that has been shown to be associated with activation of the basal ganglia \cite{coull_dissociating_2008}.
-The present study, however, uses a task involving implicit timing; more specifically, exogenous temporal expectations, which involve multiple different brain areas, but not the basal ganglia \cite{coull_dissociating_2008}.
-As the beta power that is associated with timing functions has been described as originating from the basal ganglia, and only in studies employing explicit timing tasks \cite<e.g.>{joundi_persistent_2013, bartolo_information_2014}, it is plausible that beta power does not index the implicit timing required for the present study.
-Thus, our finding that beta power is not suited as a predictor of reaction time reinforces the idea proposed by \citeA{coull_dissociating_2008} that implicit and explicit timing employ different neural structures.
+The first of our hypotheses, predicting that reaction times will be
+slower in trials with a short interval, and faster in trials with a
+long interval, was clearly supported by the data.  With the short and
+long intervals leading to a 25 ms and a 17 ms difference in reaction
+time to the standard condition, respectively, this effect is very
+substantial given that the difference between the conditions was only
+100 ms.
+
+Our second hypothesis, that beta power will correlate positively with
+reaction time, was not confirmed.  In fact, Bayesian analyses even
+suggest that it does not have any value as a predictor of reaction
+time.  This finding can be interpreted using the taxonomy proposed by
+\citeA{coull_dissociating_2008}.  \citeA{kononowicz_beta_2014}'s task
+required motor timing, a form of explicit timing that has been shown
+to be associated with activation of the basal ganglia
+\cite{coull_dissociating_2008}.  The present study, in contrast, uses
+a task involving implicit timing; more specifically, exogenous
+temporal expectations, which involve multiple different brain areas,
+but not the basal ganglia \cite{coull_dissociating_2008}.  As the beta
+power that is associated with timing functions has been described as
+originating from the basal ganglia, and only in studies employing
+explicit timing tasks \cite<e.g.>{joundi_persistent_2013,
+  bartolo_information_2014}, it is plausible that beta power does not
+index the implicit timing required for the present study.  Thus, our
+finding that beta power is not suited as a predictor of reaction time
+reinforces the idea proposed by \citeA{coull_dissociating_2008} that
+implicit and explicit timing employ different neural structures.
 
 %%%%% Hedderik to Simon
 
