--- a/main.tex
+++ b/main.tex
@@ -238,7 +238,9 @@ substantial given that the difference between the conditions was only
 Our second hypothesis, that beta power will correlate positively with
 reaction time, was not confirmed.  In fact, Bayesian analyses even
 suggest that it does not have any value as a predictor of reaction
-time.  This finding can be interpreted using the taxonomy proposed by
+time.
+
+This finding can be interpreted using the taxonomy proposed by
 \citeA{coull_dissociating_2008}.  \citeA{kononowicz_beta_2014}'s task
 required motor timing, a form of explicit timing that has been shown
 to be associated with activation of the basal ganglia
@@ -255,9 +257,22 @@ finding that beta power is not suited as a predictor of reaction time
 reinforces the idea proposed by \citeA{coull_dissociating_2008} that
 implicit and explicit timing employ different neural structures.
 
+Another possible reason for beta power not being useful to predict
+reaction time is that our task differed from those of
+\citeA{kononowicz_beta_2014}, \citeA{bartolo_information_2014}, and
+\citeA{joundi_persistent_2013} in that it did not allow participants
+to fully plan when to make the second key press directly after the
+first one, as they had to wait for the stimulus to respond. In other
+words, while previous tasks required responses based purely on
+internal cues (interval timing), the present task required
+participants to wait for an external cue to respond. Thus, our finding
+might suggest that internally and externally cued tasks employ
+different timing mechanisms.
+
+
 %%%%% Hedderik to Simon
 
-% no separate future research section; include in into rest of text if at all
+% no separate future research section; include it into rest of text if at all
 
 % talk about both internal/external cues & explicit/implicit timing
 
