--- a/main.tex
+++ b/main.tex
@@ -108,7 +108,6 @@ beta oscillations to fully resynchronize between trials.  As in
 \citeauthor{bartolo_information_2014}'s study, beta power was
 postitively correlated with the length of the produced intervals.
 
-% Interval timing -> reaction time
 In another area of the field of timing, a large body of research
 exists that links interval timing to reaction time tasks
 \cite<e.g.,>{karlin_reaction_1959, drazin_effects_1961,
@@ -129,7 +128,6 @@ These findings clearly show that timing plays a role in reaction time
 tasks, in that participants implicitly use their sense of time to
 predict when the stimulus will occur.
 
-% This study
 The purpose of the present study is to investigate the link between
 beta power, interval timing, and reaction time.  As beta power has
 been found to increase the length of estimated time intervals
@@ -227,8 +225,14 @@ actually occurs, leading to a slower reaction time.
 %   kononowicz: S can plan when to make second press -> beta at start
 %   we:         S has to wait for beep -> no motor suppression at start
 
+In the present study we investigated the connection between interval
+timing, beta power, and reaction time. We tested whether presenting
+the stimulus to react to earlier or later than expected would
+influence response speed, and given this effect, whether beta activity
+would influence reaction time by changing the time at which
+participants expect the stimulus.
 
-
+\subsection{Interval Length}
 The first of our hypotheses, predicting that reaction times will be
 slower in trials with a short interval, and faster in trials with a
 long interval, was clearly supported by the data.  With the short and
@@ -237,7 +241,29 @@ time to the standard condition, respectively, this effect is very
 substantial given that the difference between the conditions was only
 100 ms.
 
-\subsection{Interval Length}
+As expected from previous studies \cite<e.g.,>{karlin_reaction_1959,
+  drazin_effects_1961, grosjean_timing_2001}, participants reacted
+slower in trials with short intervals, and faster in trials with long
+intervals. The decrease in response speed for short intervals can be
+accounted for by the fact that participants are likely not yet
+prepared to react, as they don't expect the stimulus to occur at this
+time.
+
+The faster response speed on trials with long intervals is more
+interesting. It would seem reasonable to expect participants to
+increase their preparedness to react until the point when they expect
+the stimulus, and then either stay on that level of preparedness, or
+even ``lose interest'' and become slower again. Our findings, however,
+suggest that preparedness increases even further after the point in
+time when the stimulus is expected to occur. This supports research by
+\citeA{naatanen_diminishing_1970}, who argued that the increase in
+response speed in fact stems from the passage of time. As participants
+know that the stimulus will occur eventually, the more time passes,
+the likelier it becomes that it will occur in the next moment. This
+perspective leads to the prediction that reaction time becomes faster
+the more time elapses before the stimulus, which is in fact what we
+found. It would be an intriguing question for future research whether
+this effect holds over a wider timespan.
 
 \subsection{Beta Power}
 Our second hypothesis, that beta power will correlate positively with
@@ -301,6 +327,9 @@ Given the potential benefit of a more beneficial distribution of
 conditions, combined with no negative effects in case of failure, the
 kind of BCI used in the present study can safely be used in future
 research of a similar nature.
+
+\subsection{Conclusion}
+
 
 %%%%% Hedderik to Simon
 
